# pytree2safetensor

./: README.md  pyproject.toml
src/pytree2safetensor/: __init__.py  _shared_types.py  load.py  save.py
