[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytree2safetensor"
version = "0.1.3"
authors = [
  { name="Joseph Camacho", email="camacho.joseph@gmail.com" },
]
description = "A simple package to save and load JAX PyTrees to and from Safetensors"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jax",
  "jaxtyping",
  "safetensors"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cooljoseph1/pytree2safetensor"
Issues = "https://github.com/cooljoseph1/pytree2safetensor/issues"